# serissa

./: .gitignore  .gitmodules  README.md  main.go
note/design/: aim.md  arch.md
note/learn/: learn.md
s3/: main.go
store/bitstore/: .gitignore  .gitmodules  CMakeLists.txt  README.md  do_cmake.sh
store/bitstore/conf/: bitstore.conf
store/bitstore/include/: libaio.h
store/bitstore/src/: CMakeLists.txt  bitstore.cc  main.cc
store/bitstore/src/aio/: CMakeLists.txt  aio.c  aio.h  aiocontext.c  aiocontext.h  blockdevice.c  blockdevice.h
store/bitstore/src/asyncio/: CMakeLists.txt  aio.c  aio.h  aiocontext.c  aiocontext.h  blockdevice.c  blockdevice.h
store/bitstore/src/core/: CMakeLists.txt  config.c  config.h  constants.h  log.cc  log.h  thread.c  thread.h
store/bitstore/src/error/: error.h
store/bitstore/src/pb/: bitstore.proto
store/bitstore/src/server/: bitstore.cc  bitstore.h
